[package]
name = "mav_crypt_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
byteorder = "1.5.0"
clap = { version = "4.4.18", features = ["derive", "cargo"] }
libc = "0.2.153"
log = "0.4.20"
mavlink = "0.12.2"
serde = { version = "1.0.197", features = ["derive"] }
serialport = "4.3.0"
simple_logger = "4.3.3"
