[package]
name = "mav_crypt_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive", "cargo"] }
libc = "0.2.153"
mavlink = "0.12.2"
serial2 = "0.2.19"
